# life_on_canvas_v2

./: .gitignore  README.md
client_LoC/: CMakeLists.txt
client_LoC/src/: CMakeLists.txt
client_LoC/src/CanvasController/: CMakeLists.txt  CanvasController.cpp  CanvasController.h
client_LoC/src/GraphicsItems/: CMakeLists.txt  IGraphicsItem.cpp  IGraphicsItem.h  IGraphicsItemFactory.cpp  IGraphicsItemFactory.h
client_LoC/src/GraphicsItems/Ellipse/: CMakeLists.txt  EllipseItem.cpp  EllipseItem.h  EllipseItemFactory.cpp  EllipseItemFactory.h
client_LoC/src/GraphicsItems/FreeLine/: CMakeLists.txt  FreeLineItem.cpp  FreeLineItem.h  FreeLineItemFactory.cpp  FreeLineItemFactory.h
client_LoC/src/GraphicsItems/Line/: CMakeLists.txt  LineItem.cpp  LineItem.h  LineItemFactory.cpp  LineItemFactory.h
client_LoC/src/GraphicsItems/Rect/: CMakeLists.txt  RectangleItem.cpp  RectangleItem.h  RectangleItemFactory.cpp  RectangleItemFactory.h
client_LoC/src/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  mainwindow.ui
client_LoC/src/MainWindow/Scene/: CMakeLists.txt  GraphicsScene.cpp  GraphicsScene.h
client_LoC/src/MainWindow/ToolBar/: CMakeLists.txt  ToolBar.cpp  ToolBar.h
client_LoC/src/MainWindow/View/: CMakeLists.txt  View.cpp  View.h
client_LoC/src/Storage/: CMakeLists.txt  Storage.cpp  Storage.h
